# Crime-or-Contact

./: LICENSE  README.md  local_config.example.py  pyproject.toml  replicate.py
notebooks/: collect_data.ipynb  run_analysis.ipynb
scripts/: collect_data.py  run_analysis.py
src/absence_and_crime/etl/: clean_attendance.py  covariates.py  criminal_records.py  define_families.py  household_instability.py  setup_panels.py
src/absence_and_crime/results/: appendix.py  figures.py  tables.py
