[project]
name = "school-absence-and-parental-crime"
version = "0.1.0"
description = "Replication code for the paper PROJECT TITLE"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "pyarrow>=6.0",
    "scikit-learn>=1.0",
]

# Metadata: README location and authors/contacts
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]

[project.optional-dependencies]
ipynb = ["ipykernel>=6.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]